clusters/mgmt-01/central-services/vault/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault
spec:
  ingressClassName: traefik
  rules:
    - host: vault.mgmt.litomi.internal
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vault-active
                port:
                  number: 8200
